--- a/WebForm.html
+++ b/WebForm.html
@@ -11,22 +11,22 @@
   <h3>Биатлонный стадион "Жемчужина Сибири"</h3>
     <form name="myform" id="myform" method="post">
 	<table>
-      <tr><td>Ваше имя   :</td>
+      <tr><td>Ваше имя <span class="red">*</span> :</td>
 	  <td><input type="text" name="name" id="name"
 	  required></td></tr>
 	  
-	  <tr><td>Ваш пароль    :</td>
+	  <tr><td>Ваш пароль <span class="red">*</span>  :</td>
 	  <td><input type="password" name="pass" id="pass" autocomplete="off"
 	  required></td></tr>
 	  
-	  <tr><td>Ваш телефон   :</td>
+	  <tr><td>Ваш телефон <span class="red">*</span> :</td>
 	  <td><input type="tel" name="tel" id="tel"
 	  required></td></tr>
 	  
-	  <tr><td>Ваш E-mail   :</td><td><input type="email" name="email" id="email"
+	  <tr><td>Ваш E-mail <span class="red">*</span> :</td><td><input type="email" name="email" id="email"
 	  required></td></tr>
 	  
-	  <tr><td>Вид билета  :</td>
+	  <tr><td>Вид билета <span class="red">*</span>:</td>
 	  <td>
 	   <select name="v" id="v">
 	    <option>Трибуна А - 400 руб.</option>
@@ -37,10 +37,10 @@
 	  </select>
 	  </td></tr>
 	  
-	  <tr><td>Дата  :</td><td><input type="date" name="date" id="date"
+	  <tr><td>Дата <span class="red">*</span>:</td><td><input type="date" name="date" id="date"
 	  required></td></tr>
 	  
-	  <tr><td>Количество билетов  :</td>
+	  <tr><td>Количество билетов <span class="red">*</span>:</td>
 	  <td><input type="number" name="kol" id="kol" min="1"
 	  required></td></tr>
 	  
@@ -49,7 +49,7 @@
       <tr class="center"><td><input class="but" type="reset" value="Очистить"></td>
 	  <td><input class="but" type="submit" value="Заказать"></td></tr>
 	  <tr><td>&nbsp;</td><td>&nbsp;</td></tr> <!-- Пустая строка -->
-	  <tr><td colspan="2" class="red mini">&nbsp;</td></tr>
+	  <tr><td colspan="2" class="red mini">Поля отмеченные * обязательны для заполнения</td></tr>
 	  </table>
     </form>
    </div>
