add some placeholder attribute

--- a/WebForm.html
+++ b/WebForm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <title>Формы HTML5</title>
@@ -13,18 +13,18 @@
 	<table>
       <tr><td>Ваше имя <span class="red">*</span> :</td>
 	  <td><input type="text" name="name" id="name"
-	  required></td></tr>
+	  required placeholder="Ваше Имя"></td></tr>
 	  
 	  <tr><td>Ваш пароль <span class="red">*</span>  :</td>
 	  <td><input type="password" name="pass" id="pass" autocomplete="off"
-	  required></td></tr>
+	  required placeholder="Ваш Пароль"></td></tr>
 	  
 	  <tr><td>Ваш телефон <span class="red">*</span> :</td>
 	  <td><input type="tel" name="tel" id="tel"
-	  required></td></tr>
+	  required placeholder="Ваш телефон"></td></tr>
 	  
 	  <tr><td>Ваш E-mail <span class="red">*</span> :</td><td><input type="email" name="email" id="email"
-	  required></td></tr>
+	  required ></td></tr>
 	  
 	  <tr><td>Вид билета <span class="red">*</span>:</td>
 	  <td>
@@ -42,7 +42,7 @@
 	  
 	  <tr><td>Количество билетов <span class="red">*</span>:</td>
 	  <td><input type="number" name="kol" id="kol" min="1"
-	  required></td></tr>
+	  required ></td></tr>
 	  
 	  
 	  <tr><td>&nbsp;</td><td>&nbsp;</td></tr> <!-- Пустая строка -->
