add other placeholder attribute

--- a/WebForm.html
+++ b/WebForm.html
@@ -24,7 +24,7 @@
 	  required placeholder="Ваш телефон"></td></tr>
 	  
 	  <tr><td>Ваш E-mail <span class="red">*</span> :</td><td><input type="email" name="email" id="email"
-	  required ></td></tr>
+	  required placeholder="Ваш E-mail"></td></tr>
 	  
 	  <tr><td>Вид билета <span class="red">*</span>:</td>
 	  <td>
@@ -42,7 +42,7 @@
 	  
 	  <tr><td>Количество билетов <span class="red">*</span>:</td>
 	  <td><input type="number" name="kol" id="kol" min="1"
-	  required ></td></tr>
+	  required placeholder="Количество билетов"></td></tr>
 	  
 	  
 	  <tr><td>&nbsp;</td><td>&nbsp;</td></tr> <!-- Пустая строка -->
